CSS fix for wrapping
FIXD

--- a/src/test3/www/css/style.css
+++ b/src/test3/www/css/style.css
@@ -1,9 +1,11 @@
 .right{
     float:right;
+	max-width:100%;
 }
 
 .left{
     float:left;
+	max-width:100%;
 }
 
 #author{
